--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.8.1",
     "recharts": "^2.13.0",
     "shadcn-ui": "^0.9.2"
   },
